use-cases/governance/policies/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privileged
  namespace: asm-usecase
  labels:
    app: nginx-privileged
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
