use-cases/governance/policies/authz-policy-safe.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-principals
  namespace: asm-usecase
spec:
  selector:
    matchLabels:
      app: test
  action: DENY
  rules:
    - to:
        - operation:
            notPaths:
              - "/v1/test"
